--- a/css/style2.css
+++ b/css/style2.css
@@ -107,7 +107,7 @@ body {
         #4aa3ff 50%,
         #b7d3ec 100%
     );
-    padding: 20px 0 24px;
+    padding: 12px 0 14px;     /*padding: 20px 0 24px;*/
     border-radius: 12px;
     box-shadow: 0 -3px 14px rgba(0,0,0,0.12);
     cursor: pointer;
@@ -118,7 +118,7 @@ body {
     text-align: center;
     font-size: 20px;        
     font-weight: 700;       
-    margin-bottom: 30px;
+     margin-bottom: 12px; /*margin-bottom: 30px;*/
     color: #000;            
 }
 
@@ -171,3 +171,4 @@ body {
 #most-popular-footer:hover .popular-image img {
     transform: scale(1.05);
 }
+
