--- a/css/style2.css
+++ b/css/style2.css
@@ -76,17 +76,17 @@ body {
     left: 0;
     width: 100%;
     background: #fff;
-    padding: 15px 20px;
+    padding: 20px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     z-index: 1000;
 }
 .back {
-    margin: 15px 0 20px 15px; /*margin-bottom: 20px;*/
+    margin: 0 0 8px 0; /*margin-bottom: 20px;*/
     padding: 8px 12px;
     cursor: pointer;
 }
 .top h2 {
-    display: inline-block;
+    display: block;
     margin: 0;
 }
 
@@ -185,6 +185,7 @@ body {
 #most-popular-footer:hover .popular-image img {
     transform: scale(1.05);
 }
+
 
 
 
