--- a/css/style2.css
+++ b/css/style2.css
@@ -70,26 +70,11 @@ body {
 }
 
 /* ===== кнопка "назад" ===== */
-.top {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background: #fff;
-    padding: 20px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    z-index: 1000;
-}
 .back {
-    margin: 0 0 8px 0; /*margin-bottom: 20px;*/
+    margin: 15px 0 20px 15px;
     padding: 8px 12px;
     cursor: pointer;
 }
-.top h2 {
-    display: block;
-    margin: 0;
-}
-
 /* ===== картки сайтів ===== */
 .card {
     position: relative;
@@ -185,6 +170,7 @@ body {
 #most-popular-footer:hover .popular-image img {
     transform: scale(1.05);
 }
+
 
 
 
